better issue details gravatar alignment

--- a/sass/components/_issue.scss
+++ b/sass/components/_issue.scss
@@ -24,7 +24,7 @@
 
         table img.gravatar {
             position: relative;
-            top: -1px;
+            top: -3px;
             margin-right: 5px;
         }
 
